Fix: Icons sometimes not centered

--- a/app/assets/stylesheets/scrivito_icon_box/widget.css
+++ b/app/assets/stylesheets/scrivito_icon_box/widget.css
@@ -5,51 +5,50 @@
   box-sizing: initial;
   -webkit-box-sizing: initial;
   -moz-box-sizing: initial;
-  text-align: center;
 }
 
 .scrivito-icon-box.circle,
 .scrivito-icon-box.filled-circle {
   border-radius: 50px;
+  text-align: center;
 }
 
 .scrivito-icon-box.small {
-  width: 52px;
-  height: 52px;
+  width: 50px;
+  height: 50px;
 }
 
 .scrivito-icon-box.medium {
-  width: 62px;
-  height: 62px;
+  width: 60px;
+  height: 60px;
 }
 
 .scrivito-icon-box.large {
-  width: 72px;
-  height: 72px;
+  width: 70px;
+  height: 70px;
 }
 
 .scrivito-icon-box i {
-  text-align: center;
-  margin-top: 14%;
+  margin: 10px;
 }
 
 .scrivito-icon-box.small i {
   font-size: 30px;
-  height: 32px;
-  width: 32px;
-  line-height: 32px;
+  height: 30px;
+  width: 30px;
+  line-height: 30px;
 }
 
 .scrivito-icon-box.medium i {
   font-size: 40px;
-  height: 42px;
-  width: 42px;
-  line-height: 42px;
+  height: 40px;
+  width: 40px;
+  line-height: 40px;
 }
 
 .scrivito-icon-box.large i {
   font-size: 50px;
-  height: 52px;
-  width: 52px;
-  line-height: 52px;
+  height: 50px;
+  width: 50px;
+  line-height: 50px;
 }
